--- a/report.html
+++ b/report.html
@@ -36218,7 +36218,7 @@ a = np.array([[ 0.24879643,  0.07032244,  0.12641572,  0.34763842,  0.07893497,
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><strong>Answer:</strong></p>
-<p>See above for visualization of new images, below for random sample of the valid set</p>
+<p>See above for visualization of new images, below for random sample of the valid set. On the valid set the softmax probabilities are very certain.</p>
 
 </div>
 </div>
